lib/src/ffi/bindings.g.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Auto-generated FFI bindings for fdc_ffi.h
class DatachannelBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DatachannelBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DatachannelBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Char> fdc_version() {
    return _fdc_version();
  }

  late final _fdc_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'fdc_version');
  late final _fdc_version =
      _fdc_versionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// Create a context. Returns NULL on invalid config.
  ffi.Pointer<FdcContext> fdc_create(
    ffi.Pointer<FdcConfig> config,
  ) {
    return _fdc_create(
      config,
    );
  }

  late final _fdc_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<FdcContext> Function(
              ffi.Pointer<FdcConfig>)>>('fdc_create');
  late final _fdc_create = _fdc_createPtr
      .asFunction<ffi.Pointer<FdcContext> Function(ffi.Pointer<FdcConfig>)>();

  /// Destroy context; stops if still running.
  void fdc_destroy(
    ffi.Pointer<FdcContext> ctx,
  ) {
    return _fdc_destroy(
      ctx,
    );
  }

  late final _fdc_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<FdcContext>)>>(
          'fdc_destroy');
  late final _fdc_destroy =
      _fdc_destroyPtr.asFunction<void Function(ffi.Pointer<FdcContext>)>();

  /// Register event callbacks. Must be called before fdc_start().
  /// Pass NULL for individual callbacks you do not need.
  void fdc_set_callbacks(
    ffi.Pointer<FdcContext> ctx,
    FdcCallbacks callbacks,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _fdc_set_callbacks(
      ctx,
      callbacks,
      user_data,
    );
  }

  late final _fdc_set_callbacksPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<FdcContext>, FdcCallbacks,
              ffi.Pointer<ffi.Void>)>>('fdc_set_callbacks');
  late final _fdc_set_callbacks = _fdc_set_callbacksPtr.asFunction<
      void Function(
          ffi.Pointer<FdcContext>, FdcCallbacks, ffi.Pointer<ffi.Void>)>();

  /// Connect to signaling and begin accepting / discovering peers.
  int fdc_start(
    ffi.Pointer<FdcContext> ctx,
  ) {
    return _fdc_start(
      ctx,
    );
  }

  late final _fdc_startPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<FdcContext>)>>(
          'fdc_start');
  late final _fdc_start =
      _fdc_startPtr.asFunction<int Function(ffi.Pointer<FdcContext>)>();

  /// Disconnect all peers and leave signaling.
  int fdc_stop(
    ffi.Pointer<FdcContext> ctx,
  ) {
    return _fdc_stop(
      ctx,
    );
  }

  late final _fdc_stopPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<FdcContext>)>>(
          'fdc_stop');
  late final _fdc_stop =
      _fdc_stopPtr.asFunction<int Function(ffi.Pointer<FdcContext>)>();

  /// Current runtime state.
  FdcRuntimeState fdc_get_runtime_state(
    ffi.Pointer<FdcContext> ctx,
  ) {
    return FdcRuntimeState.fromValue(_fdc_get_runtime_state(
      ctx,
    ));
  }

  late final _fdc_get_runtime_statePtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<FdcContext>)>>(
      'fdc_get_runtime_state');
  late final _fdc_get_runtime_state = _fdc_get_runtime_statePtr
      .asFunction<int Function(ffi.Pointer<FdcContext>)>();

  /// Configured mode.
  FdcMode fdc_get_mode(
    ffi.Pointer<FdcContext> ctx,
  ) {
    return FdcMode.fromValue(_fdc_get_mode(
      ctx,
    ));
  }

  late final _fdc_get_modePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<FdcContext>)>>('fdc_get_mode');
  late final _fdc_get_mode =
      _fdc_get_modePtr.asFunction<int Function(ffi.Pointer<FdcContext>)>();

  /// Initiate an outgoing connection to `remote_peer_id`.
  /// Allowed in FDC_MODE_CLIENT and FDC_MODE_HYBRID only.
  int fdc_connect(
    ffi.Pointer<FdcContext> ctx,
    ffi.Pointer<ffi.Char> remote_peer_id,
  ) {
    return _fdc_connect(
      ctx,
      remote_peer_id,
    );
  }

  late final _fdc_connectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<FdcContext>, ffi.Pointer<ffi.Char>)>>('fdc_connect');
  late final _fdc_connect = _fdc_connectPtr.asFunction<
      int Function(ffi.Pointer<FdcContext>, ffi.Pointer<ffi.Char>)>();

  /// Request refreshed list of available server peers from signaling.
  /// Allowed in FDC_MODE_CLIENT and FDC_MODE_HYBRID only.
  int fdc_refresh_peers(
    ffi.Pointer<FdcContext> ctx,
  ) {
    return _fdc_refresh_peers(
      ctx,
    );
  }

  late final _fdc_refresh_peersPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<FdcContext>)>>(
          'fdc_refresh_peers');
  late final _fdc_refresh_peers =
      _fdc_refresh_peersPtr.asFunction<int Function(ffi.Pointer<FdcContext>)>();

  /// Send raw bytes to a connected peer over the primary data channel.
  int fdc_send(
    ffi.Pointer<FdcContext> ctx,
    ffi.Pointer<ffi.Char> peer_id,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _fdc_send(
      ctx,
      peer_id,
      data,
      len,
    );
  }

  late final _fdc_sendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<FdcContext>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint8>, ffi.Size)>>('fdc_send');
  late final _fdc_send = _fdc_sendPtr.asFunction<
      int Function(ffi.Pointer<FdcContext>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>, int)>();

  /// Convenience wrapper for UTF-8 text.
  int fdc_send_text(
    ffi.Pointer<FdcContext> ctx,
    ffi.Pointer<ffi.Char> peer_id,
    ffi.Pointer<ffi.Char> text,
  ) {
    return _fdc_send_text(
      ctx,
      peer_id,
      text,
    );
  }

  late final _fdc_send_textPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<FdcContext>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('fdc_send_text');
  late final _fdc_send_text = _fdc_send_textPtr.asFunction<
      int Function(ffi.Pointer<FdcContext>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  /// Send an Ollama API request (HTTP-style envelope) to a server peer.
  /// The server proxies this to its local Ollama instance and responds asynchronously
  /// via the on_message callback.
  ///
  /// Example path: "/api/generate"
  /// Example body: {"model":"llama3","prompt":"Hello","stream":false}
  int fdc_send_ollama_request(
    ffi.Pointer<FdcContext> ctx,
    ffi.Pointer<ffi.Char> peer_id,
    ffi.Pointer<ffi.Char> method,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> body_json,
  ) {
    return _fdc_send_ollama_request(
      ctx,
      peer_id,
      method,
      path,
      body_json,
    );
  }

  late final _fdc_send_ollama_requestPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<FdcContext>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('fdc_send_ollama_request');
  late final _fdc_send_ollama_request = _fdc_send_ollama_requestPtr.asFunction<
      int Function(
          ffi.Pointer<FdcContext>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  /// Disconnect a specific peer.
  int fdc_disconnect_peer(
    ffi.Pointer<FdcContext> ctx,
    ffi.Pointer<ffi.Char> peer_id,
  ) {
    return _fdc_disconnect_peer(
      ctx,
      peer_id,
    );
  }

  late final _fdc_disconnect_peerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<FdcContext>,
              ffi.Pointer<ffi.Char>)>>('fdc_disconnect_peer');
  late final _fdc_disconnect_peer = _fdc_disconnect_peerPtr.asFunction<
      int Function(ffi.Pointer<FdcContext>, ffi.Pointer<ffi.Char>)>();

  /// Last error message for this context; NULL if none. Thread-safe copy into buffer.
  int fdc_get_last_error(
    ffi.Pointer<FdcContext> ctx,
    ffi.Pointer<ffi.Char> buffer,
    int size,
  ) {
    return _fdc_get_last_error(
      ctx,
      buffer,
      size,
    );
  }

  late final _fdc_get_last_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<FdcContext>, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('fdc_get_last_error');
  late final _fdc_get_last_error = _fdc_get_last_errorPtr.asFunction<
      int Function(ffi.Pointer<FdcContext>, ffi.Pointer<ffi.Char>, int)>();

  /// Initialize global libdatachannel resources (optional, called automatically).
  void fdc_init() {
    return _fdc_init();
  }

  late final _fdc_initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('fdc_init');
  late final _fdc_init = _fdc_initPtr.asFunction<void Function()>();

  /// Release global libdatachannel resources.
  void fdc_cleanup() {
    return _fdc_cleanup();
  }

  late final _fdc_cleanupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('fdc_cleanup');
  late final _fdc_cleanup = _fdc_cleanupPtr.asFunction<void Function()>();
}

/// ── Runtime mode ──────────────────────────────────────────────────────
enum FdcMode {
  FDC_MODE_CLIENT(0),
  FDC_MODE_SERVER(1),
  FDC_MODE_HYBRID(2);

  final int value;
  const FdcMode(this.value);

  static FdcMode fromValue(int value) => switch (value) {
        0 => FDC_MODE_CLIENT,
        1 => FDC_MODE_SERVER,
        2 => FDC_MODE_HYBRID,
        _ => throw ArgumentError('Unknown value for FdcMode: $value'),
      };
}

/// ── Connection / session state ────────────────────────────────────────
enum FdcRuntimeState {
  FDC_STATE_STOPPED(0),
  FDC_STATE_STARTING(1),
  FDC_STATE_SIGNALING(2),
  FDC_STATE_READY(3),
  FDC_STATE_ERROR(4);

  final int value;
  const FdcRuntimeState(this.value);

  static FdcRuntimeState fromValue(int value) => switch (value) {
        0 => FDC_STATE_STOPPED,
        1 => FDC_STATE_STARTING,
        2 => FDC_STATE_SIGNALING,
        3 => FDC_STATE_READY,
        4 => FDC_STATE_ERROR,
        _ => throw ArgumentError('Unknown value for FdcRuntimeState: $value'),
      };
}

enum FdcPeerState {
  FDC_PEER_DISCONNECTED(0),
  FDC_PEER_CONNECTING(1),
  FDC_PEER_CONNECTED(2),
  FDC_PEER_FAILED(3);

  final int value;
  const FdcPeerState(this.value);

  static FdcPeerState fromValue(int value) => switch (value) {
        0 => FDC_PEER_DISCONNECTED,
        1 => FDC_PEER_CONNECTING,
        2 => FDC_PEER_CONNECTED,
        3 => FDC_PEER_FAILED,
        _ => throw ArgumentError('Unknown value for FdcPeerState: $value'),
      };
}

/// ── Configuration ─────────────────────────────────────────────────────
final class FdcConfig extends ffi.Struct {
  @ffi.UnsignedInt()
  external int modeAsInt;

  FdcMode get mode => FdcMode.fromValue(modeAsInt);

  /// WebSocket URL of the signaling server, e.g. ws://host:8765
  external ffi.Pointer<ffi.Char> signaling_url;

  /// Unique peer identifier (required)
  external ffi.Pointer<ffi.Char> peer_id;

  /// STUN server URI, e.g. stun:stun.l.google.com:19302
  external ffi.Pointer<ffi.Char> stun_server;

  /// Optional TURN server URI
  external ffi.Pointer<ffi.Char> turn_server;

  /// Optional TURN username
  external ffi.Pointer<ffi.Char> turn_username;

  /// Optional TURN password
  external ffi.Pointer<ffi.Char> turn_password;

  /// Base URL for Ollama on the server machine.
  /// Used in FDC_MODE_SERVER and FDC_MODE_HYBRID when proxying requests.
  /// Default: http://127.0.0.1:11434
  external ffi.Pointer<ffi.Char> ollama_url;

  /// Label for the primary data channel. Default: "ollama"
  external ffi.Pointer<ffi.Char> data_channel_label;

  /// Enable verbose libdatachannel logging
  @ffi.Int()
  external int verbose_logging;
}

typedef FdcOnRuntimeStateFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> user_data,
    ffi.UnsignedInt state,
    ffi.Pointer<ffi.Char> message);
typedef DartFdcOnRuntimeStateFunction = void Function(
    ffi.Pointer<ffi.Void> user_data,
    FdcRuntimeState state,
    ffi.Pointer<ffi.Char> message);

/// Called when the runtime state changes.
/// `message` may be NULL; valid only for the duration of the callback.
typedef FdcOnRuntimeState
    = ffi.Pointer<ffi.NativeFunction<FdcOnRuntimeStateFunction>>;
typedef FdcOnPeerStateFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Char> peer_id,
    ffi.UnsignedInt state);
typedef DartFdcOnPeerStateFunction = void Function(
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Char> peer_id,
    FdcPeerState state);

/// Called when a remote peer's connection state changes.
typedef FdcOnPeerState
    = ffi.Pointer<ffi.NativeFunction<FdcOnPeerStateFunction>>;
typedef FdcOnMessageFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Char> peer_id,
    ffi.Pointer<ffi.Uint8> data,
    ffi.Size len);
typedef DartFdcOnMessageFunction = void Function(
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Char> peer_id,
    ffi.Pointer<ffi.Uint8> data,
    int len);

/// Called when a data-channel message arrives from `peer_id`.
/// `data` is valid only for the duration of the callback.
typedef FdcOnMessage = ffi.Pointer<ffi.NativeFunction<FdcOnMessageFunction>>;
typedef FdcOnPeersUpdatedFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> user_data, ffi.Pointer<ffi.Char> peers_json);
typedef DartFdcOnPeersUpdatedFunction = void Function(
    ffi.Pointer<ffi.Void> user_data, ffi.Pointer<ffi.Char> peers_json);

/// Called when the list of available server peers is updated (client/hybrid).
typedef FdcOnPeersUpdated
    = ffi.Pointer<ffi.NativeFunction<FdcOnPeersUpdatedFunction>>;
typedef FdcOnLogFunction = ffi.Void Function(ffi.Pointer<ffi.Void> user_data,
    ffi.Int level, ffi.Pointer<ffi.Char> message);
typedef DartFdcOnLogFunction = void Function(
    ffi.Pointer<ffi.Void> user_data, int level, ffi.Pointer<ffi.Char> message);

/// Called for log lines from the native layer.
typedef FdcOnLog = ffi.Pointer<ffi.NativeFunction<FdcOnLogFunction>>;

final class FdcCallbacks extends ffi.Struct {
  external FdcOnRuntimeState on_runtime_state;

  external FdcOnPeerState on_peer_state;

  external FdcOnMessage on_message;

  external FdcOnPeersUpdated on_peers_updated;

  external FdcOnLog on_log;
}

final class FdcContext extends ffi.Opaque {}
